[gd_scene load_steps=5 format=3 uid="uid://dkyrbpxgqqngv"]

[ext_resource type="Texture2D" uid="uid://8ej6rfgqwaw5" path="res://ui/gear.png" id="1_udid0"]
[ext_resource type="Script" path="res://ui/settings_button.gd" id="2_h52gk"]
[ext_resource type="Script" path="res://ui/settings_popup.gd" id="3_6ers7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsp3o"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.670588, 0.745098, 0.886275, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[node name="SettingsButton" type="TextureButton"]
modulate = Color(0.133333, 0.305882, 0.65098, 1)
texture_normal = ExtResource("1_udid0")
script = ExtResource("2_h52gk")

[node name="SettingsPopup" type="PopupMenu" parent="."]
unique_name_in_owner = true
size = Vector2i(139, 128)
theme_override_colors/font_color = Color(0.133333, 0.305882, 0.65098, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_fsp3o")
item_count = 4
item_0/text = "Display"
item_0/id = 3
item_0/separator = true
item_1/text = "Fullscreen"
item_1/checkable = 1
item_1/id = 0
item_2/text = "Audio"
item_2/id = 2
item_2/separator = true
item_3/text = "Mute Sfx"
item_3/checkable = 1
item_3/id = 1
script = ExtResource("3_6ers7")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="id_pressed" from="SettingsPopup" to="." method="_on_settings_popup_id_pressed"]
[connection signal="visibility_changed" from="SettingsPopup" to="SettingsPopup" method="_on_visibility_changed"]
